fix: change header z-index

--- a/style/styles.css
+++ b/style/styles.css
@@ -66,7 +66,7 @@ code {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 3;
   background-color: inherit;
 }
 .header__title {
